[gd_scene load_steps=4 format=3 uid="uid://byf7sywsx4ynb"]

[ext_resource type="Script" path="res://addons/rpg_baker/Editors/Main Screen/class_editor.gd" id="1_bduyv"]
[ext_resource type="Script" path="res://addons/rpg_baker/Editors/Main Screen/TraitsPanel.gd" id="2_iqc4y"]
[ext_resource type="PackedScene" uid="uid://mmgd5mtfldn6" path="res://addons/rpg_baker/Editors/Main Screen/Stats/AllStatsPanel.tscn" id="3_qpn0u"]

[node name="Classes" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_bduyv")

[node name="CountLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 3.0
offset_top = 11.0
offset_right = 50.0
offset_bottom = 37.0
text = "Count"

[node name="ClassCount" type="LineEdit" parent="CountLabel"]
layout_mode = 0
offset_left = -1.0
offset_top = 24.0
offset_right = 66.0625
offset_bottom = 55.0
text = "3"
alignment = 1

[node name="Resize" type="Button" parent="CountLabel"]
layout_mode = 0
offset_left = 74.0
offset_top = 23.0
offset_right = 131.0
offset_bottom = 54.0
text = "Resize"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = -1
offset_top = 79.0
offset_right = 146.0
offset_bottom = 617.0

[node name="classlist" type="GridContainer" parent="ScrollContainer"]
custom_minimum_size = Vector2(146, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="NameLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 151.0
offset_top = 3.0
offset_right = 198.0
offset_bottom = 29.0
text = "Name"

[node name="NameLineEdit" type="LineEdit" parent="NameLabel"]
layout_mode = 0
offset_top = 26.0
offset_right = 304.0
offset_bottom = 57.0
text = "Purple Mage"

[node name="Description" type="Label" parent="."]
layout_mode = 0
offset_left = 151.0
offset_top = 65.0
offset_right = 230.0
offset_bottom = 91.0
text = "Profile"

[node name="DescLineEdit" type="TextEdit" parent="Description"]
layout_mode = 0
offset_top = 26.0
offset_right = 446.0
offset_bottom = 115.0
text = "No"
wrap_mode = 1

[node name="TraitsPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 151.0
offset_top = 359.0
offset_right = 702.0
offset_bottom = 634.0
script = ExtResource("2_iqc4y")

[node name="TraitsLabel" type="Label" parent="TraitsPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -21.5
offset_top = -27.0
offset_right = 22.5
offset_bottom = -1.0
grow_horizontal = 2
text = "Traits"
horizontal_alignment = 1

[node name="PlusButton" type="Button" parent="TraitsPanel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -30.0
offset_top = -35.0
offset_bottom = -4.0
grow_horizontal = 0
text = "+"

[node name="ScrollContainer" type="ScrollContainer" parent="TraitsPanel"]
layout_mode = 0
offset_left = 8.0
offset_top = 3.0
offset_right = 546.0
offset_bottom = 415.0

[node name="VBoxContainer" type="VBoxContainer" parent="TraitsPanel/ScrollContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="TraitsPanel"]
layout_mode = 0
offset_left = 1.0
offset_top = -29.0
offset_right = 94.0
offset_bottom = -3.0
text = "Lvl Attained"

[node name="CurLayerContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 154.0
offset_top = 190.0
offset_right = 462.0
offset_bottom = 290.0

[node name="Sprite" type="TextureButton" parent="CurLayerContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="CurLayerContainer/Sprite"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
offset_top = 96.0
offset_right = 100.0
offset_bottom = 121.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 15
text = "Sprite"
horizontal_alignment = 1

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CurLayerContainer/Sprite"]
position = Vector2(50, 51)

[node name="X" type="Button" parent="CurLayerContainer/Sprite"]
layout_mode = 0
offset_left = 76.0
offset_right = 94.0
offset_bottom = 31.0
text = "X"

[node name="Bust" type="TextureButton" parent="CurLayerContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="CurLayerContainer/Bust"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
offset_top = 96.0
offset_right = 100.0
offset_bottom = 121.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 15
text = "Sprite"
horizontal_alignment = 1

[node name="<" type="Button" parent="CurLayerContainer/Bust/Label"]
self_modulate = Color(0, 0, 0, 0)
layout_mode = 0
offset_left = 4.0
offset_top = 20.0
offset_right = 22.0
offset_bottom = 42.0
theme_override_font_sizes/font_size = 10
text = "<"

[node name=">" type="Button" parent="CurLayerContainer/Bust/Label/<"]
layout_mode = 0
offset_left = 74.0
offset_right = 92.0
offset_bottom = 22.0
theme_override_font_sizes/font_size = 10
text = ">"

[node name="LayerLabel" type="Label" parent="CurLayerContainer/Bust/Label/<"]
layout_mode = 0
offset_left = 18.0
offset_top = 2.0
offset_right = 74.0
offset_bottom = 28.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 14
text = "Layer: 1"
horizontal_alignment = 1

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CurLayerContainer/Bust"]
position = Vector2(49, 51)

[node name="X" type="Button" parent="CurLayerContainer/Bust"]
layout_mode = 0
offset_left = 76.0
offset_right = 94.0
offset_bottom = 31.0
text = "X"

[node name="BattleSprite" type="TextureButton" parent="CurLayerContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="CurLayerContainer/BattleSprite"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
offset_top = 96.0
offset_right = 100.0
offset_bottom = 121.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 15
text = "Sprite"
horizontal_alignment = 1

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CurLayerContainer/BattleSprite"]
position = Vector2(47, 51)

[node name="X" type="Button" parent="CurLayerContainer/BattleSprite"]
layout_mode = 0
offset_left = 76.0
offset_right = 94.0
offset_bottom = 31.0
text = "X"

[node name="PreviewContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 459.0
offset_right = 767.0
offset_bottom = 100.0

[node name="SpriteFrameDialog" type="FileDialog" parent="."]
title = "Open a File"
position = Vector2i(236, 113)
size = Vector2i(500, 500)
ok_button_text = "Open"
file_mode = 0
filters = PackedStringArray("*.tres")
show_hidden_files = true

[node name="AllStatsPanel" parent="." instance=ExtResource("3_qpn0u")]
layout_mode = 0
offset_left = 725.0
offset_right = 1161.0
scope = 1

[connection signal="button_down" from="CountLabel/Resize" to="." method="_on_resize_button_down"]
[connection signal="text_changed" from="NameLabel/NameLineEdit" to="." method="_on_name_line_edit_text_changed"]
[connection signal="text_changed" from="Description/DescLineEdit" to="." method="_on_desc_line_edit_text_changed"]
[connection signal="button_down" from="TraitsPanel/PlusButton" to="." method="_on_trait_plus_button_button_down"]
[connection signal="button_down" from="CurLayerContainer/Sprite" to="." method="_on_sprite_button_down"]
[connection signal="button_down" from="CurLayerContainer/Sprite/X" to="." method="_on_sprite_x_button_down"]
[connection signal="button_down" from="CurLayerContainer/Bust" to="." method="_on_bust_button_down"]
[connection signal="button_down" from="CurLayerContainer/Bust/Label/<" to="." method="_on_index_down_button_down"]
[connection signal="button_down" from="CurLayerContainer/Bust/Label/</>" to="." method="_on_index_up_button_down"]
[connection signal="button_down" from="CurLayerContainer/Bust/X" to="." method="_on_bust_x_button_down"]
[connection signal="button_down" from="CurLayerContainer/BattleSprite" to="." method="_on_battle_sprite_button_down"]
[connection signal="button_down" from="CurLayerContainer/BattleSprite/X" to="." method="_on_battle_sprite_x_button_down"]
[connection signal="file_selected" from="SpriteFrameDialog" to="." method="_on_sprite_frame_dialog_file_selected"]
